Add endpoint to support fetch group by legacy id and update search groups with filter
